Onboarded spotless (#11)
* Onboarded spotless

* Fixed pom formatting