@@ -27,23 +27,18 @@ import static org.assertj.core.api.BDDAssertions.then;
 
 import java.net.URI;
 import java.net.URL;
-
 import org.jeasy.random.EasyRandom;
+import org.jeasy.random.api.Randomizer;
+import org.jeasy.random.beans.Website;
+import org.jeasy.random.randomizers.AbstractRandomizerTest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import org.jeasy.random.api.Randomizer;
-import org.jeasy.random.beans.Website;
-import org.jeasy.random.randomizers.AbstractRandomizerTest;
-
 class NetRandomizersTest extends AbstractRandomizerTest<Randomizer<?>> {
 
     static Object[] generateRandomizers() {
-        return new Object[] { 
-                new UriRandomizer(),
-                new UrlRandomizer()
-        };
+        return new Object[] { new UriRandomizer(), new UrlRandomizer() };
     }
 
     @ParameterizedTest
@@ -56,9 +51,9 @@ class NetRandomizersTest extends AbstractRandomizerTest<Randomizer<?>> {
     }
 
     static Object[][] generateSeededRandomizersAndTheirExpectedValues() throws Exception {
-        return new Object[][] { 
-                { new UriRandomizer(SEED), new URI("telnet://192.0.2.16:80/") },
-                { new UrlRandomizer(SEED), new URL("http://www.google.com") }
+        return new Object[][] {
+            { new UriRandomizer(SEED), new URI("telnet://192.0.2.16:80/") },
+            { new UrlRandomizer(SEED), new URL("http://www.google.com") },
         };
     }
 
